kubernetes/2.1_sensor_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sensor-app-deployment
  labels:
    app: sensor-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sensor-app
  template:
    metadata:
      labels:
        app: sensor-app
    spec:
      containers:
      - name: sensor-nextjs
        image: de.icr.io/fh-bgld/sensor-app:latest
        ports:
        - containerPort: 3000
          name: sensor
