kubernetes/2.2_sensor_service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sensor-app
  name: sensor-svc
  namespace: sensor-app
spec:
  type: NodePort
  ports:
  - name: sensor-svc
    port: 3000
    targetPort: 3000
    nodePort: 31000
  selector:
    app: sensor-app
